# mas_perception_msgs

./: CMakeLists.txt  package.xml
action/: DetectObjects.action  DetectScene.action
msg/: Blob.msg  BlobList.msg  Face.msg  PeopleScene.msg  Person.msg  PersonList.msg  Plane.msg  PlaneList.msg
srv/: BaseScanLinearRegression.srv  FindWorkspace.srv  GetObjectList.srv  GetPersonList.srv
